--- a/src/eyetracking/eyetracking/CMakeLists.txt
+++ b/src/eyetracking/eyetracking/CMakeLists.txt
@@ -110,7 +110,7 @@ generate_dynamic_reconfigure_options(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+  #INCLUDE_DIRS include
   CATKIN_DEPENDS roscpp rospy std_msgs eyetracking_msgs dynamic_reconfigure
   )
 
