add eyescene map color block

--- a/src/macaca_eyescene_map/CMakeLists.txt
+++ b/src/macaca_eyescene_map/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(macaca_eyescene_map)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  dynamic_reconfigure
   )
 
 find_package(OpenCV 3.3)
@@ -91,10 +92,9 @@ find_package(OpenCV 3.3)
 ##     and list every .cfg file to be processed
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
+ generate_dynamic_reconfigure_options(
+   cfg/ColorBlock.cfg
+ )
 
 ###################################
 ## catkin specific configuration ##
@@ -108,9 +108,11 @@ find_package(OpenCV 3.3)
 catkin_package(
     INCLUDE_DIRS include
     LIBRARIES macaca_eyescene_map
-    CATKIN_DEPENDS ar_track_alvar message_generation roscpp rospy std_msgs eyetracking_msgs
+    CATKIN_DEPENDS ar_track_alvar message_generation roscpp rospy std_msgs eyetracking_msgs dynamic_reconfigure
     #DEPENDS system_lib
   )
+
+include_directories(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake) 
 
 ###########
 ## Build ##
@@ -132,24 +134,23 @@ include_directories(
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(get_calibration_datafile_node src/get_calibration_datafile_node.cpp)
-target_link_libraries(get_calibration_datafile_node
+add_executable(artag src/artag.cpp)
+target_link_libraries(artag
   ${catkin_LIBRARIES}
   ${OpenCV_LIBS}
   )
 
-add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
-target_link_libraries(${PROJECT_NAME}_node
+add_executable(colorblock src/colorblock.cpp)
+target_link_libraries(colorblock
   ${catkin_LIBRARIES}
   ${OpenCV_LIBS}
   )
 
-
+add_dependencies(colorblock ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 #############
 ## Install ##
 #############
